@@ -1,3 +1,5 @@
+Run this in terminal after downloading the jar to open program: java --module-path "C:\Program Files\Java\javafx-sdk-24\lib" --add-modules javafx.controls,javafx.fxml -jar OmniVent.jar
+
 # SE_Final-Project_Event-Booking-System
 
 ## Product Backlog Sprint 2
@@ -17,7 +19,7 @@
 - [x] User Profile Pic  
 - [x] CC Info  
 - [x] My Events
-- [ ] Clean Up Functionality (clear text boxes, etc.)
+- [x] Clean Up Functionality (clear text boxes, etc.)
       
 <ins>**Admin Screen**</ins>  
 - [x] Venue Manager  
@@ -34,9 +36,9 @@
 
 <ins>**Other**</ins>  
 - [X] HELP BUTTON FOR EVERY SCREEN (video later)  
-- [ ] Green-Black Colors
+- [x] Green-Black Colors
 - [x] Left Buttons Right Everything Else
-- [ ] Main Screen (Company Logo, Buttons to login, guest login, etc.)  
+- [x] Main Screen (Company Logo, Buttons to login, guest login, etc.)  
 
 TYPE THIS INTO NOTEPAD AND INSERT CHANGE TO LOCATION FOR YOUR COMPUTER, ONCE DONE SAVE IT AS A '.bat' FILE AND OPEN THAT FILE TO RUN THIS
 @echo off
